force-app/main/default/objects/TAD_Other_Payment__c/TAD_Other_Payment__c.object-meta.xml
<CustomObject>
    <description>Other payments such as zip and bank deposit can be accounted for here...</description>
    <label>TAD Other Payment</label>
    <nameField>
        <displayFormat>TP{00000000}</displayFormat>
        <label>TAD Other Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAD Other Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>