force-app/main/default/objects/TAD_Other_Payment__c/fields/comments__c.field-meta.xml
<CustomField>
    <fullName>comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>