force-app/main/default/objects/TAD_Other_Payment__c/fields/payment_type__c.field-meta.xml
<CustomField>
    <fullName>payment_type__c</fullName>
    <label>Payment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>ZipMoney</fullName>
            </value>
            <value>
                <fullName>TAD Credit Code</fullName>
            </value>
            <value>
                <fullName>TAD Gift Voucher</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Bpoint Transferred Receipt Number</fullName>
            </value>
            <value>
                <fullName>Competition Winner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>