force-app/main/default/objects/TAD_Other_Payment__c/fields/phone_sale__c.field-meta.xml
<CustomField>
    <fullName>phone_sale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phone Sale</label>
    <referenceTo>Phone_Sale__c</referenceTo>
    <relationshipLabel>TAD Other Payments</relationshipLabel>
    <relationshipName>TAD_Other_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>