force-app/main/default/objects/TAD_Other_Payment__c/fields/reference_number__c.field-meta.xml
<CustomField>
    <fullName>reference_number__c</fullName>
    <inlineHelpText>If available. A reference number may be a number that will help to find the transaction in either the bank statement or a zip money reference.</inlineHelpText>
    <label>Reference Number</label>
    <length>72</length>
    <type>Text</type>
</CustomField>